--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,22 +1,5 @@
 {
-  "docsets_to_publish": [
-    {
-      "docset_name": "Test-conceptual-core-docs",
-      "build_source_folder": ".",
-      "build_output_subfolder": "Test-conceptual-core-docs",
-      "locale": "en-us",
-      "monikers": [],
-      "moniker_ranges": [],
-      "open_to_public_contributors": true,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes"
-    }
-  ],
+  "docsets_to_publish": [],
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
